    - [ 2454 ] Security Vulnerability in Jython
    - [ 2442 ] Overriding __len__, __iter__, and __getitem__ in a tuple subclass
               causes an infinite recursion
    - [ 2112 ] time.strptime() has different default year in Jython and CPython
    - [ 1767 ] Rich comparisons
    - [ 2314 ] Failures in test_shutil on Windows

  New Features
    - Added uname function to posix module. The mostly Java-based implementation even
      works to some extend on non-posix systems. Additional tweaks extend this to full
      featured uname-functionality on Windows systems (usable via os.uname()).
    - Buffer API changes allow java.nio.ByteBuffer to provide the storage when a PyBuffer
      is exported. This is to support CPython extensions via JyNI, but has other uses too
      (including access to direct memory buffers from Python). There is no change at the
      Python level or for client code using PyBuffer via the "fully encapsulated" API. It
      risks breaking code that makes direct access to a byte array via PyBuffer, implements
      the PyBuffer interface, or extends implementation classes in org.python.core.buffer.

Jython 2.7.1b3
  Bugs fixed
    - [ 550200 ] Jython does not work on ebcdic platforms
    - [ 2457 ] Synchronization bug in PySystemStateCloser causes complete deadlock
    - [ 2456 ] java.util.List.remove(index) does not dispatch to overloaded method for index remove
    - [ 2453 ] org.python.modules.sre.PatternObject should be named SRE_Pattern to look like CPython
    - [ 2452 ] Jython locking threads on Java proxy objects (multithreaded performance degradation)
    - [ 2451 ] array.array objects should not hash
    - [ 2441 ] sys.executable is None on standalone install, thus causing a setup()
               install/build to fail
    - [ 2439 ] 'SSLSocket' object has no attribute 'accept'
    - [ 2437 ] no common ciphers SSL handshake error
    - [ 2436 ] Missing socket.SOL_TCP (= socket.IPPROTO_TCP)